[package]
name = "multi-warrior"
version = "0.1.0"
authors = ["Martin Lavoie <broemartino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
rand = "0.7.3"
coz = "0.1"

[profile.release]
debug = 1


