[package]
name = "multi-warrior"
version = "0.2.0"
authors = ["Martin Lavoie <broemartino@gmail.com>"]
edition = "2021"

[lib]
name = "multi_warrior_lib"
path = "src/game.rs"

[[bin]]
name = "multi_warrior"
path = "src/main.rs"

[dependencies]
bevy = "0.8"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
serial_test = "*"

[profile.release]
debug = 1
